--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scrollreveal": "^4.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CI=false && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
