--- a/netlify.toml
+++ b/netlify.toml
@@ -4,13 +4,7 @@ to = "/index.html"
 status = 200
 
 [[redirects]]
-  from = "/api/*"
-  to = "https://buyenergy.herokuapp.com/public/api/"
+  from = "/*"
+  to = "/https://buyenergy.herokuapp.com/public/api/"
   status = 200
   force = true
-
-[[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
-    [headers.values]
-    Access-Control-Allow-Origin = "*"
